# University

./: README.md
CLion/GA/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
CLion/Marti/: CMakeLists.txt  Posts.cpp  Posts.h  RepoPosts.h  RepoUsers.cpp  User.cpp  main.cpp  userwindow.cpp  userwindow.ui
CLion/Practice/: Buildings.cpp  CMakeLists.txt  Service.cpp  UI.h
CLion/examPractice3/: CMakeLists.txt  Task.h  TaskRepo.h  main.cpp
CLion/practiceExam2/: main.cpp  user.h  user.ui
Semester 1/Algebra/: README.md
Semester 1/Computational Logic/: Lucas_Șipoș_group_916_2.pptm  Lucas_Șipoș_group_916_2.pptx  README.md
Semester 1/Computer Science Architecture/: change.asm  lab11_01.asm  lab2_01.asm  lab2_02.asm  lab2_03.asm  lab3_01.asm  lab3_02.asm  lab4_01.asm  lab5_01.asm  lab6_01.asm  lab8_01.asm  lab8_02.asm  test.asm  test2.asm  testing.asm  translator.asm
Semester 1/Computer Science Architecture/nasm+c/: main.c  modul.asm
Semester 1/Fundamentals of Programming/Practice/: main.py  student.txt
Semester 1/Fundamentals of Programming/Seminar4_individualWork/: main.py
Semester 1/Fundamentals of Programming/a1-Lucas-Sipos/: p1.py  p2.py  p3.py
Semester 1/Fundamentals of Programming/er-916-Lucas-Sipos/: main.py
Semester 1/Fundamentals of Programming/t2-916-Lucas-Sipos/: main.py
Semester 1/Mathematical Analysis/: README.md
Semester 2/Data Structure and Algorithm/A2/: A2.vcxproj  App.cpp  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Semester 2/Data Structure and Algorithm/A3/: App.cpp  CMakeLists.txt  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
Semester 2/Data Structure and Algorithm/A4/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp
Semester 2/Data Structure and Algorithm/A5/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Semester 2/Data Structure and Algorithm/FixedCapBiMap/: App.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  ShortTest.cpp
Semester 2/Data Structure and Algorithm/Matrix/: Matrix.cpp  Matrix.h  ShortTest.cpp
Semester 2/Dynamical Systems/: P1.ipynb  P2.ipynb
Semester 2/Geometry/: README.md
Semester 2/Graph Algorithms/GA/: Graph.cpp  Graph.h  main.cpp  wuth
Semester 2/Object Oriented Programming/A5-6/: CMakeLists.txt  main.cpp
Semester 2/Object Oriented Programming/A5-6/Domain/: Movie.cpp  Movie.h
Semester 2/Object Oriented Programming/A5-6/Repository/: DynamicVector.h  Repository.cpp  Repository.h  WatchList.cpp  WatchList.h
Semester 2/Object Oriented Programming/A5-6/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/A5-6/Tests/: Tests.cpp  Tests.h
Semester 2/Object Oriented Programming/A5-6/UI/: UI.cpp  UI.h
Semester 2/Object Oriented Programming/Practice/: Block.cpp  Block.h  Buildings.h  House.cpp  House.h  Service.h  UI.cpp  main.cpp
Semester 2/Object Oriented Programming/Practice2/: CMakeLists.txt
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/: CMakeLists.txt  main.cpp
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/Domain/: Movie.cpp  Movie.h
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/ExceptionsValidators/: Validator.cpp
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/GUI/: gui.cpp  gui.h  gui.ui  startgui.cpp  startgui.h  startgui.ui  ui_GUI.h  ui_startGUI.h
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/Repository/: CSVWatchList.cpp  HTMLWatchList.cpp  HTMLWatchList.h  Repository.cpp  Repository.h  WatchList.cpp  WatchList.h
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/a11-12-916-Lucas-Sipos/UI/: UI.cpp  UI.h
Semester 2/Object Oriented Programming/a8-9-916-Lucas-Sipos/: CMakeLists.txt  main.cpp
Semester 2/Object Oriented Programming/e916-916-Lucas-Sipos-1/: Answer.cpp  Answer.h  AnswerRepo.cpp  AnswerRepo.h  CMakeLists.txt  Observer.h  Question.cpp  Question.h  QuestionRepo.cpp  QuestionRepo.h  User.cpp  User.h  UserRepo.cpp  UserRepo.h  main.cpp  search.cpp  search.h  search.ui  userwindow.cpp  userwindow.h  userwindow.ui
Semester 2/Object Oriented Programming/examPractice/: Observer.h  RepoPosts.cpp  RepoTopics.cpp  RepoTopics.h  RepoUsers.h  Topics.cpp  Topics.h  User.h  userwindow.h
Semester 2/Object Oriented Programming/examPractice3/: Observer.cpp  Observer.h  Programmer.cpp  Programmer.h  ProgrammerRepo.cpp  ProgrammerRepo.h  Task.cpp  TaskRepo.cpp  programmerwindow.cpp  programmerwindow.h  programmerwindow.ui
Semester 2/Object Oriented Programming/t1-916-Lucas-Sipos-1/: CMakeLists.txt  README.md  main.cpp
Semester 2/Object Oriented Programming/t1-916-Lucas-Sipos-1/Domain/: Player.cpp  Player.h
Semester 2/Object Oriented Programming/t1-916-Lucas-Sipos-1/Repository/: DynamicVector.h  Repository.cpp  Repository.h
Semester 2/Object Oriented Programming/t1-916-Lucas-Sipos-1/Service/: Service.cpp  Service.h
Semester 2/Object Oriented Programming/t1-916-Lucas-Sipos-1/UI/: UI.cpp  UI.h
Semester 3/Computer Networks/: bomb.sh  broadcaster.c  lab3_client.c  lab3_server.c  receiver.c  receiver_broadcast.c  sender.c  tcp_client.c  test_tcp.c
Semester 3/Database/: Lab1.sql
Semester 3/Logical and Functional Programming/: lisp1a.lisp  lisp1b.lisp  lisp2.lisp  test.lisp
Semester 3/Probabilities and Statistics/: Lab3.m  Lab3_2.m  Lab3_3.m  Lab4.m  Lab4_2.m  Lab4_3.m  Lab4_4.m  Lab5.m  Lab6.m  PS.txt  test.m
Semester 4/Software Engineering/: README.md
Semester 5/Formal Languages and Compiler Techniques/: README.md
Semester 5/Mobile Applications/: Project Idea.txt
(+594 files in other folders)
